hydroflow/tests/compile-fail/surface_syntax_paren_arrow.stderr
error: unexpected end of input, expected identifier
 --> tests/compile-fail/surface_syntax_paren_arrow.rs:5:31
  |
5 |         (source_iter(0..10) ->);
  |                               ^
